--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,8 @@ jobs:
       - name: Build
         run: npm run build
         working-directory: frontend
+        env:                                     
+          VITE_API_BASE: ${{ secrets.VITE_API_BASE }}
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
